--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <table>
-        <tr><td><img src="\pictures\angad.jpg.jpg" width="400" height="400" alt="angad profile pic"/> </td>
+        <tr><td><img src="D:\My Doc\web development\HTML-personal site\pictures\angad.jpg.jpg" width="400" height="400" alt="angad profile pic"/> </td>
         <td><h1>ANGAD PAL SINGH</h1>
             <p><em> A <strong><a href="https://www.gtbit.org/">college</a></strong> student</em></p>
             <p>I am an 18 year old, who is enrolled in an engineering college. I am pursuing a degree in cse</p>
